--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,5 +1,5 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="/js/bootstrap.bundle.min.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
-<script src="./js/menu.js"></script>
-<script src="./js/home.js"></script>
+<script src="/js/menu.js"></script>
+<script src="/js/home.js"></script>
