--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -21,7 +21,7 @@
         <input class="form-control" type="text" id="directory" name="directory" value="<%= defaultDir %>" required>
     </div>
     <div class="row g-0 align-items-center">
-        <button type="button" onclick="uploadImages()" class="btn btn-primary text-dark-md"><i class="bi bi-save"></i> &nbsp;Upload</button>
+        <button type="button" id="btnUpload" onclick="uploadImages()" class="btn btn-primary text-dark-md"><i class="bi bi-save"></i> &nbsp;Upload</button>
     </div>
 </form>
 <% include partials/footer %>
