Implemented Folder selection, previewing and deletion of images

--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -12,6 +12,9 @@
         <li class="nav-item">
           <a class="nav-link <%= menuId === 'upload' ? 'active' : '' %>" href="/upload"><i class="bi bi-upload font-md"></i>UPLOAD</a>
         </li>
+        <!-- <li class="nav-item">
+          <a class="nav-link <%= menuId === 'folder' ? 'active' : '' %>" href="/folder"><i class="bi bi-folder-check font-md"></i>FOLDER</a>
+        </li> -->
         <li class="nav-item">
           <a class="nav-link <%= menuId === 'contact' ? 'active' : '' %>" href="/contact"><i class="bi bi-envelope font-md"></i>CONTACT</a>
         </li>
