--- a/public/css/main.css
+++ b/public/css/main.css
@@ -116,3 +116,109 @@ footer {
     color: #007bff !important;
     font-size: 14px;
 }
+
+/* Style the grid container */
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+    gap: 2px;
+}
+
+.image-container {
+    position: relative;
+    cursor: pointer;
+}
+
+/* Style each image in the grid */
+.gallery img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 8px;
+    transition: opacity 0.3s;
+    /* transform: scale(0.5); Scale the image to 20% of its original size */
+    /* transform-origin: top left; Maintain the position of the image while scaling */
+}
+
+/* Optional: Style the grid items */
+.gallery .image {
+    overflow: hidden;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
+}
+
+.checkmark {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    width: 24px;
+    height: 24px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 18px;
+    color: green;
+    font-weight: bold;
+}
+
+/* .checkmark {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(255, 255, 255, 0.7);
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    color: green;
+    font-weight: bold;
+} */
+
+.image-container.selected .checkmark {
+    display: flex;
+}
+
+.image-container.selected img {
+    opacity: 0.6;
+}
+
+/* Popup footer styling */
+.popup-footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: #333;
+    color: white;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 10px;
+    box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
+    display: none; /* Hidden by default */
+    opacity: 0.9;
+}
+
+.popup-footer button {
+    background-color: #555;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.popup-footer button:hover {
+    background-color: #777;
+}
