--- a/views/index.ejs
+++ b/views/index.ejs
@@ -123,7 +123,7 @@
               <div class="form-check form-switch">
                 <input class="form-check-input" type="checkbox" role="switch" id="localFolder_<%= items.localSubdirs[i].id %>" 
                   <%= items.localSubdirs[i].show ? "checked" : "" %> oninput="updateFolder(event, <%= items.localSubdirs[i].id %>, true)">
-                <label class="form-check-label" for="localFolder_<%= items.localSubdirs[i].id %>"><i class="bi bi-folder-plus"></i> &nbsp;<%= items.localSubdirs[i].name %></label>
+                <label class="form-check-label" onclick="loadFolder('<%= items.localSubdirs[i].name %>')"><i class="bi bi-folder-plus"></i> &nbsp;<%= items.localSubdirs[i].name %></label>
               </div>
               <% } %>
             </div>
