--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,3 +6,4 @@
 <link rel="stylesheet" href="/font/bootstrap-icons.min.css">
 <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 <link rel="stylesheet" href="/css/main.css">
+<% include script %>
