--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -2,5 +2,6 @@
 <script src="/btjs/bootstrap.bundle.min.js"></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
 <script src="/js/menu.js"></script>
-<script src="/js/home.js"></script>
+<script src="/js/main.js"></script>
 <script src="/js/file.js"></script>
+<script src="/js/folder.js"></script>
