--- a/views/partials/delete-modal.ejs
+++ b/views/partials/delete-modal.ejs
@@ -7,7 +7,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to delete the selected images?
+        Are you sure you want to delete the selected item(s)?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
