--- a/views/partials/script.ejs
+++ b/views/partials/script.ejs
@@ -1,6 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="/btjs/bootstrap.bundle.min.js"></script>
+<!-- <script src="/btjs/bootstrap.bundle.min.js"></script> -->
 <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script> -->
+
 <script src="/js/menu.js"></script>
 <script src="/js/main.js"></script>
 <script src="/js/file.js"></script>
