--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,13 +19,12 @@ h3 {
   font-weight: 600;
 }
 .navbar {
-  /* padding-top: 15px;
-    padding-bottom: 15px; */
   border: 0;
   border-radius: 0;
   margin-bottom: 0;
   font-size: 14px;
   letter-spacing: 5px;
+  padding-bottom: 10px;
 }
 .navbar-nav {
   padding-left: 30px !important;
@@ -117,27 +116,126 @@ footer {
     font-size: 14px;
 }
 
+.album-gallery {
+  /* display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); */
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+}
+
+.album-container {
+  position: relative;
+  cursor: pointer;
+  overflow: hidden;
+  border: 2px solid rgba(0, 0, 0, 0.6);
+  border-radius: 20px;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+  transition: border-color 0.3s ease; /* Smooth transition */
+}
+
+.album-container.selected {
+  border-color: blue; /* Highlight selected container */
+  box-shadow: 0 0 10px rgba(0, 0, 255, 0.3); /* Optional: add shadow */
+}
+
+.album-container.selected img {
+    opacity: 0.6;
+}
+
+.album-gallery img {
+  max-width: 100%;
+  max-height: 300px;
+  object-fit: cover;
+  /* border-radius: 10px; */
+  transition: opacity 0.3s;
+  /* transform: scale(0.5); Scale the image to 20% of its original size */
+  /* transform-origin: top left; Maintain the position of the image while scaling */
+}
+
+.image-preview {
+  position: relative;
+  width: 170px; /* Set width for the square */
+  height: 225px; /* Set height for the square, same as width */
+  overflow: hidden;
+  background-color: #f0f0f0; /* Optional background color */
+}
+
+.image-preview img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain aspect ratio and fill the square */
+}
+
+.album-info {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+}
+
+.album-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  padding: 10px 20px;
+  color: white;
+  background: rgba(0, 0, 0, 0.6); /* Semi-transparent background */
+  text-align: center;
+  font-size: 16px;
+  font-weight: bold;
+  box-sizing: border-box;
+
+  /* Truncate long text with ellipsis */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.album-menu-icon {
+  position: relative;
+  margin-left: -50px;
+  top: 185px;
+  /* bottom: -185px; */
+  cursor: pointer;
+  font-size: 20px;
+  color: #fff;
+}
+
+.album-menu-icon:hover {
+  color: #007bff /* Change color on hover */
+}
+
 /* Style the grid container */
 .gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
-    gap: 2px;
+  margin-top: 60px; /* Adjust this value based on your header's height */
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(80px, 1fr));
+  gap: 2px;
 }
 
 .image-container {
-    position: relative;
-    cursor: pointer;
+  position: relative;
+  cursor: pointer;
 }
 
 /* Style each image in the grid */
 .gallery img {
-    max-width: 100%;
-    height: auto;
-    object-fit: cover;
-    border-radius: 8px;
-    transition: opacity 0.3s;
-    /* transform: scale(0.5); Scale the image to 20% of its original size */
-    /* transform-origin: top left; Maintain the position of the image while scaling */
+  max-width: 100%;
+  height: auto;
+  object-fit: cover;
+  border-radius: 8px;
+  transition: opacity 0.3s;
+  /* transform: scale(0.5); Scale the image to 20% of its original size */
+  /* transform-origin: top left; Maintain the position of the image while scaling */
+}
+
+/* Optional: Fullscreen styling */
+.gallery img:fullscreen {
+  object-fit: contain;
 }
 
 /* Optional: Style the grid items */
@@ -206,19 +304,137 @@ footer {
     padding: 10px;
     box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
     display: none; /* Hidden by default */
-    opacity: 0.9;
+    /* opacity: 0.9; */
 }
 
 .popup-footer button {
-    background-color: #555;
+    background-color: #333;
     border: none;
     color: white;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+    font-size: 20px;
 }
 
 .popup-footer button:hover {
     background-color: #777;
+}
+
+.folder-header {
+  /* gap: 20px; */
+  position: fixed;
+  /* top: 52px; */
+  left: 0;
+  z-index: 100;
+  width: 100%;
+  background-color: #fff;
+  /* color: white; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 5px 10px 15px;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.3);
+  opacity: 0.9;
+}
+
+.back-arrow {
+    position: absolute;
+    left: 15px; /* Position the back arrow to the far left */
+    padding-top: 10px;
+    cursor: pointer;
+    font-size: 24px; /* Adjust the size of the arrow icon */
+}
+
+.edit-pen {
+  position: absolute;
+  right: 15px; /* Position the back arrow to the far left */
+  padding-top: 10px;
+  cursor: pointer;
+  font-size: 16px; /* Adjust the size of the arrow icon */
+}
+
+.back-arrow:hover, .edit-pen:hover {
+  color: #007bff;
+}
+
+.folder-header h3 {
+  margin: 0;
+  display: inline-block;
+}
+
+#folderNameDisplay {
+  width: auto;
+}
+
+#folderNameInput {
+  font-size: 20px;
+  margin-left: 40px;
+  margin-top: 12px;
+  width: 100%;
+  padding: 8px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  transition: border-color 0.3s ease; /* Smooth transition */
+}
+
+#folderNameInput:focus {
+  border-color: #007bff; /* Change to the desired color */
+  outline: none; /* Remove the default blue outline */
+}
+
+/* Fullscreen styling */
+.fullscreen-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  display: none;
+  justify-content: center;
+  align-items: center;
+}
+
+.fullscreen-container img {
+  /* max-width: 80%; */
+  max-height: 100%;
+  /* z-index: 1021; */
+}
+
+.fullscreen-container.show {
+  display: flex;
+}
+
+/* Previous and Next buttons */
+.nav-arrow {
+  position: absolute;
+  top: 50%;
+  font-size: 50px;
+  color: #0a58ca;
+  cursor: pointer;
+  user-select: none;
+  transform: translateY(-50%);
+  z-index: 1000;
+  opacity: 0.5;
+}
+
+.prev {
+  left: 10px;
+}
+
+.next {
+  right: 10px;
+}
+
+/* Close button */
+.close-fullscreen {
+  position: absolute;
+  top: 0;
+  right: 10px;
+  font-size: 40px;
+  color: #0a58ca;
+  cursor: pointer;
+  z-index: 1025;
 }
