--- a/views/folder.ejs
+++ b/views/folder.ejs
@@ -6,13 +6,27 @@
 <body>
     <% include partials/menu %>
 
-    <div class="container-fluid bg-3 text-center">
-         <h3><%= folderName %></h3><br>
+    <div class="container-fluid bg-3 text-center" id="folderContainer">
+        <!-- Back Arrow Icon and Folder Name Display -->
+        <div class="folder-header">
+            <a id="backIcon" class="back-arrow" href="/albums">
+                <i class="bi bi-arrow-left"></i>
+            </a>
+            <h3 id="folderNameDisplay"><%= folderName %></h3>
+            <span id="editIcon" class="edit-pen" onclick="editFolderName()">
+                <i class="bi bi-pencil-fill"></i>
+            </span>
+
+            <!-- Editable Input Field (Initially Hidden) -->
+            <input type="text" id="folderNameInput" value="<%= folderName %>" onblur="saveFolderName()" 
+                onkeypress="handleKeyPress(event)" style="display: none;" />
+        </div>
+
         <div class="gallery">
             <% images.forEach(image => { %>
                 <div class="image-container" onclick="toggleSelect(this)">
                     <img src="/images/<%= folderName %>/<%= image %>" alt="<%= image %>" 
-                        data-path="<%= folderName %>/<%= image %>" onerror="reloadImage(this)"/>
+                        data-folder="<%= folderName %>" data-image="<%= image %>" onerror="reloadImage(this)"/>
                     <div class="checkmark">✔</div>
                 </div>
             <% }) %>
@@ -20,11 +34,14 @@
 
         <div class="popup-footer" id="popupFooter">
             <button onclick="deleteSelected()"><i class="bi bi-trash3"></i></button>
+            <button onclick="viewSelected()"><i class="bi bi-eye"></i></button>
             <button onclick="downloadSelected()"><i class="bi bi-cloud-download"></i></button>
             <button onclick="shareSelected()"><i class="bi bi-share-fill"></i></button>
+            <button onclick="toggleSelectAll()"><i class="bi bi-check-all"></i></button>
             <!-- Add more actions as needed -->
         </div>
     </div>
+    <% include partials/fullscreen %>
     <% include partials/delete-modal %>
     <% include partials/footer %>
 </body>
