--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,6 +4,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="/btcss/bootstrap.min.css">
 <link rel="stylesheet" href="/font/bootstrap-icons.min.css">
-<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
 <link rel="stylesheet" href="/css/main.css">
+
+<script src="/btjs/bootstrap.bundle.min.js"></script>
 <% include script %>
