--- a/views/partials/menu.ejs
+++ b/views/partials/menu.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+<nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top" id="mainNavbar">
   <div class="container-fluid">
     <a class="navbar-brand" href="/">PICTURE FRAME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -12,9 +12,9 @@
         <li class="nav-item">
           <a class="nav-link <%= menuId === 'upload' ? 'active' : '' %>" href="/upload"><i class="bi bi-upload font-md"></i>UPLOAD</a>
         </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link <%= menuId === 'folder' ? 'active' : '' %>" href="/folder"><i class="bi bi-folder-check font-md"></i>FOLDER</a>
-        </li> -->
+        <li class="nav-item">
+          <a class="nav-link <%= menuId === 'albums' ? 'active' : '' %>" href="/albums"><i class="bi bi-folder-check font-md"></i>ALBUMS</a>
+        </li>
         <li class="nav-item">
           <a class="nav-link <%= menuId === 'contact' ? 'active' : '' %>" href="/contact"><i class="bi bi-envelope font-md"></i>CONTACT</a>
         </li>
