--- a/views/albums.ejs
+++ b/views/albums.ejs
@@ -11,7 +11,7 @@
     <div class="album-gallery">
         <% randomImages.forEach(img => { %>
             <div class="album-container" onclick="loadFolder('<%= img.folderName %>')" 
-                id="<%= img.id %>" data-name="<%= img.folderName %>">
+                id="<%= img.id %>" data-name="<%= img.folderName %>" data-show="<%= img.show %>">
                 <div class="image-preview">
                     <img src="/images/<%= img.folderName %>/<%= img.image %>" alt="<%= img.image %>">
                 </div>
@@ -22,7 +22,7 @@
     </div>
     <div class="popup-footer" id="popupFooter">
         <button onclick="deleteAlbum()"><i class="bi bi-trash3"></i></button>
-        <button onclick="hideAlbum()"><i class="bi bi-eye-slash"></i></button>
+        <button onclick="updateShowAlbum()"><i class="bi bi-eye-slash" id="iconEye"></i></button>
         <!-- Add more actions as needed -->
     </div>
 </div>
