--- a/public/css/main.css
+++ b/public/css/main.css
@@ -308,18 +308,32 @@ footer {
 }
 
 .popup-footer button {
-    background-color: #333;
-    border: none;
-    color: white;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    font-size: 20px;
+  background-color: #333;
+  border: none;
+  color: white;
+  /* padding: 10px 20px; */
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center; /* Center the icon and label horizontally */
+  justify-content: center; /* Center the icon and label vertically */
 }
 
 .popup-footer button:hover {
     background-color: #777;
+}
+
+#popupFooter button i {
+  font-size: 20; /* Adjust icon size */
+}
+
+#popupFooter button .label {
+  margin-top: 0px;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .folder-header {
